--- a/MicroFocus-ROI-app/src/app/home/home.component.html
+++ b/MicroFocus-ROI-app/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <html>
-<div class="row home-objects col">
-  <div class="main-stuff"> 
+<div class="row home-objects">
+  <div class="col main-stuff"> 
     <div class="pie fade-in">
       <div class="back">
           <div class="mask">
