--- a/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
+++ b/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
@@ -1,7 +1,7 @@
 <div class="mf-questn container">
   <div class="row">
     <div class="col-md-6">
-      <h2 class="animated fade-in-up" style="margin-left: 28%">Tell us a little about your organization</h2>
+      <h2 class="animated fade-in-up mf-title">Tell us a little about your organization</h2>
       <div class="mf-questn-form">
 
         <div class="mf-input-row animated fade-in-up" style="animation-delay: .2s;">
@@ -28,7 +28,7 @@
 
       </div>
     </div>
-    <div class="col-md-6 animated fade-in" style="animation-delay:.5s;">
+    <div class="col-md-5 offset-md-1 animated fade-in" style="animation-delay:.5s;">
       <app-helper-box></app-helper-box>
     </div>
   </div>
