--- a/MicroFocus-ROI-app/src/app/helper-box/helper-box.component.css
+++ b/MicroFocus-ROI-app/src/app/helper-box/helper-box.component.css
@@ -1,9 +1,9 @@
 .mf-tooltip {
-    position: absolute;
-    top: 0;
+    /* position: absolute; */
+    margin-top: 96px;
     border-radius: 4px;
     box-shadow: 0 3px 10px rgba(0,0,0,.16);
-    width: 360px;
+    width: 100%;
     overflow: hidden;
 }
 
