--- a/assets/css/_animations.css
+++ b/assets/css/_animations.css
@@ -1,21 +1,35 @@
+.animated {
+    animation-duration: 1s; /* Default Duration */
+    animation-fill-mode: both;
+}
+
+.fade-in-up {
+    opacity: 0;
+    animation-name: fadeInUp;
+}
+
+.fade-in {
+    opacity: 0;  /* make things invisible upon start */
+    animation: fadeIn ease-in 1;
+    animation-fill-mode: forwards;
+    animation-duration: .5s;
+}
+
+.fade-in.btn {
+    animation-delay: .5s;
+}
+
+.fade-in.info-text {
+    animation-delay: .4s;
+}
+
+.fade-in.pie {
+    animation-delay: .1s;
+}
+
 /* Keyframes */
-
-@keyframes progress
-{
-from {transform: rotate(0)}
-to {transform: rotate(135deg)}
-} 
-
+@keyframes progress { from {transform: rotate(0)} to {transform: rotate(135deg)} } 
   
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-  
-  @keyframes fadeInUp {
-    from {
-        transform: translate3d(0,40px,0)
-    }
 
-    to {
-        transform: translate3d(0,0,0);
-        opacity: 1
-    }
-}
+@keyframes fadeInUp { from { transform: translate3d(0, 40px, 0) } to {transform: translate3d(0,0,0);opacity: 1;} }
