All things Footer
Mimicked the footer in MicroFocus.com.
Added breakpoints for mobile-view.
Added fonts, and updated FontAwesome script.
Fixed questionnaire height.
Removed footer tag around app-footer.

--- a/MicroFocus-ROI-app/src/app/app.component.html
+++ b/MicroFocus-ROI-app/src/app/app.component.html
@@ -2,4 +2,4 @@
 <div class="main">
   <router-outlet></router-outlet>  <!-- All routes are loaded in here -->
 </div>
-<footer><app-footer></app-footer><footer> <!-- Footer route here -->
+<app-footer></app-footer> <!-- Footer route here -->
