--- a/MicroFocus-ROI-app/src/app/footer/footer.component.css
+++ b/MicroFocus-ROI-app/src/app/footer/footer.component.css
@@ -1,8 +1,55 @@
-.footer {
+footer {
+    position: relative;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 3rem;
+    background-color: #272A2A;
     text-align: center;
     color: white;
 }
 
-.footer-text {
-    color: white;
+.footer-text, p {
+    color: rgb(218, 218, 218);
+}
+
+a:link, a:active, a:visited {
+    color: #29CEFF; 
+}
+
+a:hover {
+    color: #29CEFF; 
+    text-decoration: underline;
+}
+
+div[class^="col"] {
+    text-align: left;
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    padding: 0;
+    list-style-type: none;
+    text-align: left;
+}
+
+.copyright {
+        color: grey;
+}
+
+p {
+    margin: 0;
+}
+
+@media (max-width: 992px) {
+    .footer {
+        max-height: none;
+    }
+}
+
+@media (min-width: 992px) {
+    .footer {
+        max-height: 256px;
+    }
 }
