--- a/MicroFocus-ROI-app/src/app/footer/footer.component.html
+++ b/MicroFocus-ROI-app/src/app/footer/footer.component.html
@@ -1,18 +1,79 @@
+<footer>
 
-<div class="footer">
+<div class="container">
 
-<div class="row">
+<div class="row justify-content-md-center border-bottom border-dark" >
 
-<div class="col-2 footer-text">Logo and date </div>
+<div class="col-md-2 footer-text">
+  
+    <ul>
+        <li><i class="fas fa-globe"></i><a href="#">  Language</a></li>
+        <li><i class="far fa-comments"></i><a href="#">  Contact Us</a></li>
+        <li><i class="far fa-user"></i>  <a href="#">  Feedback</a></li>
+    </ul>
+  
+  </div>
 
-<div class="col-2 footer-text">About links</div>
+<div class="col-md-1"></div>
 
-<div class="col-2 footer-text">Social links</div>
+<div class="col-md-2 footer-text"><p>Legal</p>
+    <ul>
+        <li>  <a href="#">Privacy Policy</a></li>
+        <li>  <a href="#">Terms of Use</a></li>
+    </ul>
+</div>
 
-<div class="col-3 footer-text">Subscribe to our newletter</div>
-<div class="col-3 footer-text">Contact information</div>
+<div class="col-md-2 footer-text"><p>Compliance</p>
+    <ul>
+        <li>  <a href="#">Accessibility</a></li>
+        <li>  <a href="#">Anti-Slavory Statement</a></li>
+    </ul>
+</div>
+
+<div class="col-md-2 footer-text"><p>Help</p>
+    <ul>
+        <li>  <a href="#">Support</a></li>
+        <li>  <a href="#">How To Buy</a></li>
+    </ul>
+</div>
+
+<div class="col-md-2 footer-text"><p>Company</p>
+    <ul>
+        <li>  <a href="#">Careers</a></li>
+        <li>  <a href="#">Investor Relations</a></li>
+        <li>  <a href="#">Corproate Blog</a></li>
+    </ul>
+</div>
 
 </div>
 
-  <!-- FOOTER -->
+<!-- Second row here -->
+
+<div class="row justify-content-md-center">
+
+    <div class="col-md-1 footer-text">
+        <a href="#">Community ></a>
+    </div>
+    <div class="col-md-2 footer-text">
+     <a>Follow us on:</a>
+     <a href="#"><i class="fab fa-twitter-square fa-lg footer-text"></i></a>
+     <a href="#"><i class="fab fa-facebook-square fa-lg footer-text"></i></a>
+     <a href="#"><i class="fab fa-linkedin fa-lg footer-text"></i></a>
+     <a href="#"><i class="fab fa-youtube-square fa-lg footer-text"></i></a>
+     <a href="#"><i class="fab fa-google-plus-square fa-lg footer-text"></i></a>
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-5 footer-text">
+     <a href="#">Subscribe</a> <a>to Micro Focus</a>
+    </div>
+    <div class="col-md-2 footer-text">
+        <p class="copyright">© 2018 Micro Focus</p>
+    </div>
+
+    
+
+
+    
 </div>
+</div>
+</footer>
