--- a/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
+++ b/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
@@ -6,23 +6,23 @@
 
         <div class="mf-input-row animated fade-in-up" style="animation-delay: .2s;">
           <label for="num_staff">Number of Staff</label>
-          <input id="num_staff" name="num_staff" type="text" placeholder="0">
+          <input [(ngModel)]="mfNumStaff" id="num_staff" name="num_staff" type="text" placeholder="0">
         </div>
         <div class="mf-input-row percentage animated fade-in-up" style="animation-delay: .3s;">
           <label for="annual_turnover">Annual Turnover (%)</label>
-          <input id="annual_turnover" name="annual_turnover" type="text" placeholder="0.0">
+          <input [(ngModel)]="mfAnTurnover" id="annual_turnover" name="annual_turnover" type="text" placeholder="0.0">
         </div>
         <div class="mf-input-row dollar animated fade-in-up" style="animation-delay: .4s;">
           <label for="avg_wage">Average Hourly Wage</label>
-          <input id="avg_wage" name="avg_wage" type="text" placeholder="0.00">
+          <input [(ngModel)]="mfAvgWage" id="avg_wage" name="avg_wage" type="text" placeholder="0.00">
         </div>
         <div class="mf-input-row dollar animated fade-in-up" style="animation-delay: .5s;">
           <label for="avg_it">Average IT Hourly Wage</label>
-          <input id="avg_it" name="avg_it" type="text" placeholder="0.00">
+          <input [(ngModel)]="mfAvgItWage" id="avg_it" name="avg_it" type="text" placeholder="0.00">
         </div>
         <div class="mf-input-row animated fade-in-up" style="animation-delay: .6s;">
           <label for="num_app">Number of Applications</label>
-          <input id="num_app" name="num_app" type="text" placeholder="0">
+          <input [(ngModel)]="mfNumApps" id="num_app" name="num_app" type="text" placeholder="0">
         </div>
         <a class="btn btn-primary mf-cont-btn" routerLink="/savings">continue</a>
 
