--- a/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
+++ b/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
@@ -28,7 +28,7 @@
 
       </div>
     </div>
-    <div class="col-md-5 offset-md-1 animated fade-in" style="animation-delay:.5s;">
+    <div class="col-md-5 offset-md-1 d-none d-md-block animated fade-in" style="animation-delay:.5s;">
       <app-helper-box></app-helper-box>
     </div>
   </div>
