Forgot to check this in. New Graph component. DO NPM INSTALL

--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
@@ -17,7 +17,9 @@
         </div>
 
         <div class="mf-charts col-md-8">
-          <img src="assets/TempImage.png" style="max-height: 165px; width:100%;" class="detail-image">
+
+          <app-charts></app-charts>
+          <!-- <img src="assets/TempImage.png" style="max-height: 165px; width:100%;" class="detail-image"> -->
         </div>
 
         <div class="mf-solution-cta col-12">
