--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
@@ -17,13 +17,11 @@
         </div>
 
         <div class="mf-charts col-md-8">
-
-          <app-charts></app-charts>
-          <!-- <img src="assets/TempImage.png" style="max-height: 165px; width:100%;" class="detail-image"> -->
+          <app-charts [data]="cat.savings.yearRoi"></app-charts>
         </div>
 
         <div class="mf-solution-cta col-12">
-            <a class="btn btn-light" href="#">Learn More</a> <div class="mf-savings">Save {{ cat.savings | currency: dollar }} / year</div>
+            <a class="btn btn-light" href="#">Learn More</a> <div class="mf-savings">Save {{ cat.savings.savings | currency: dollar }} / year</div>
         </div>
       </div>
       <a class="btn btn-primary mf-change-btn" routerLink="/begin" routerLinkActive="active">Change Information</a>
