--- a/MicroFocus-ROI-app/src/assets/css/_forms.css
+++ b/MicroFocus-ROI-app/src/assets/css/_forms.css
@@ -2,7 +2,10 @@
 
 .checkbox {
     position: relative;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
     padding-left: 0;
  }
 
@@ -16,6 +19,8 @@
     border: 2px solid #00CFFB;
     border-radius: 8px;
     background-color: #fff;
+    -webkit-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
+    -o-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
     transition: border 0.15s ease-in-out, color 0.15s ease-in-out; 
 }
 
@@ -36,7 +41,9 @@
     border: 2px #881FD3 solid;
     border-top: 0;
     border-left: 0;
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
     margin-left: 8px;
 }
 
