--- a/MicroFocus-ROI-app/src/app/helper-box/helper-box.component.css
+++ b/MicroFocus-ROI-app/src/app/helper-box/helper-box.component.css
@@ -1,9 +1,12 @@
 .mf-tooltip {
     margin-top: 96px;
     border-radius: 4px;
-    box-shadow: 0 3px 10px rgba(0,0,0,.16);
+    -webkit-box-shadow: 0 3px 10px rgba(0,0,0,.16);
+            box-shadow: 0 3px 10px rgba(0,0,0,.16);
     width: 100%;
     overflow: hidden;
+    -webkit-transition: margin-top 1s;
+    -o-transition: margin-top 1s;
     transition: margin-top 1s;
 }
 
@@ -34,8 +37,12 @@
     border-left-width: 0;
     margin-left: 0;
     margin-top: 20px;
+    -webkit-transition: margin-left .5s;
+    -o-transition: margin-left .5s;
     transition: margin-left .5s;
-    transition-delay: .5s;
+    -webkit-transition-delay: .5s;
+         -o-transition-delay: .5s;
+            transition-delay: .5s;
     z-index: -1;
 }
 
