--- a/MicroFocus-ROI-app/src/assets/css/_animations.css
+++ b/MicroFocus-ROI-app/src/assets/css/_animations.css
@@ -1,35 +1,49 @@
 .animated {
-    animation-duration: 1s; /* Default Duration */
-    animation-fill-mode: both;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s; /* Default Duration */
+    -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
 }
 
 .fade-in-up {
     opacity: 0;
-    animation-name: fadeInUp;
+    -webkit-animation-name: fadeInUp;
+            animation-name: fadeInUp;
 }
 
 .fade-in {
     opacity: 0;  /* make things invisible upon start */
-    animation: fadeIn ease-in 1;
-    animation-fill-mode: forwards;
-    animation-duration: .5s;
+    -webkit-animation: fadeIn ease-in 1;
+            animation: fadeIn ease-in 1;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    -webkit-animation-duration: .5s;
+            animation-duration: .5s;
 }
 
 .fade-in.btn {
-    animation-delay: .5s;
+    -webkit-animation-delay: .5s;
+            animation-delay: .5s;
 }
 
 .fade-in.info-text {
-    animation-delay: .4s;
+    -webkit-animation-delay: .4s;
+            animation-delay: .4s;
 }
 
 .fade-in.pie {
-    animation-delay: .1s;
+    -webkit-animation-delay: .1s;
+            animation-delay: .1s;
 }
 
 /* Keyframes */
-@keyframes progress { from {transform: rotate(0)} to {transform: rotate(135deg)} } 
+@-webkit-keyframes progress { from {-webkit-transform: rotate(0);transform: rotate(0)} to {-webkit-transform: rotate(135deg);transform: rotate(135deg)} }
+@keyframes progress { from {-webkit-transform: rotate(0);transform: rotate(0)} to {-webkit-transform: rotate(135deg);transform: rotate(135deg)} } 
+  
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } } 
   
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
-@keyframes fadeInUp { from { transform: translate3d(0, 40px, 0) } to {transform: translate3d(0,0,0);opacity: 1;} }
+@-webkit-keyframes fadeInUp { from { -webkit-transform: translate3d(0, 40px, 0); transform: translate3d(0, 40px, 0) } to {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);opacity: 1;} }
+
+@keyframes fadeInUp { from { -webkit-transform: translate3d(0, 40px, 0); transform: translate3d(0, 40px, 0) } to {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);opacity: 1;} }
