--- a/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
+++ b/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
@@ -9,7 +9,7 @@
           <input [(ngModel)]="mfNumStaff" (focus)="focused($event, 1)" id="num_staff" name="num_staff" type="text" placeholder="0">
         </div>
         <div class="mf-input-row percentage animated fade-in-up" style="animation-delay: .3s;">
-          <label for="annual_turnover">Annual Turnover (%)</label>
+          <label for="annual_turnover">Annual Employee Turnover (%)</label>
           <input [(ngModel)]="mfAnTurnover" (focus)="focused($event, 10)" id="annual_turnover" name="annual_turnover" type="text" placeholder="0.0">
         </div>
         <div class="mf-input-row dollar animated fade-in-up" style="animation-delay: .4s;">
