--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.css
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.css
@@ -34,7 +34,7 @@
 
 .mf-solution-desc {
     font-size: 14px;
-    padding: 15px 30px 0 30px;
+    padding: 15px 30px 15px 30px;
 }
 
 .mf-solution-cta {
@@ -55,8 +55,8 @@
     float: right;
 }
 
-@media (min-width: 750px) {
+@media (min-width: 992px) {
     .mf-savings {
         float: right;
     }
-}
+ }
