UI fixes, esp in footer (still needs centering)

--- a/MicroFocus-ROI-app/src/app/footer/footer.component.html
+++ b/MicroFocus-ROI-app/src/app/footer/footer.component.html
@@ -2,71 +2,71 @@
 
 <div class="container">
 
-<div class="row justify-content-md-center border-bottom border-dark" >
+<div class="row rr justify-content-md-center border-bottom border-dark" >
+        
+    <!-- <div class="col-md-6" > -->        
+        <div class="col-xs-6 col-sm-offset-1 col-sm-5 col-md-2 footer-text">
+        
+            <ul>
+                <br> <!-- This will remain as long as "Language" isn't available, to retain styling -->
+                <!-- <li><i class="fas fa-globe"></i><a href="#">  Language</a></li> --> <!-- We currently don't have support for additional languages -->
+                <li><i class="far fa-comments"></i><a href="https://www.microfocus.com/">  Our Website</a></li> <!-- This previously was Contact Us, but we don't have that component set up (reference behavior in microfocus.com) -->
+                <li><i class="far fa-user"></i>  <a href="https://www.microfocus.com/feedback/">  Feedback</a></li>
+            </ul>
+        
+        </div>
 
-<div class="col-md-2 footer-text">
-  
-    <ul>
-        <li><i class="fas fa-globe"></i><a href="#">  Language</a></li>
-        <li><i class="far fa-comments"></i><a href="#">  Contact Us</a></li>
-        <li><i class="far fa-user"></i>  <a href="#">  Feedback</a></li>
-    </ul>
-  
-  </div>
+        <div class="col-xs-6 col-sm-5 col-md-2 footer-text"><p>Legal</p>
+            <ul>
+                <li>  <a href="https://www.microfocus.com/about/legal/#privacy">Privacy Policy</a></li>
+                <li>  <a href="https://www.microfocus.com/about/legal/">Terms of Use</a></li>
+            </ul>
+        </div>
 
-<div class="col-md-1"></div>
+        <div class="col-xs-6 col-sm-offset-1 col-sm-5 col-md-offset-0 col-md-2 footer-text"><p>Compliance</p>
+            <ul>
+                <li>  <a href="https://www.microfocus.com/about/section-508-compliance/">Accessibility</a></li>
+                <li>  <a href="https://www.microfocus.com/media/guide/anti-slavery-statement.pdf">Anti-Slavory Statement</a></li>
+            </ul>
+        </div>
+    <!-- </div> -->
+    <!-- <div class="col-md-6" > -->
+            <div class="col-xs-6 col-sm-5 col-md-2 footer-text"><p>Help</p>
+            <ul>
+                <li>  <a href="https://www.microfocus.com/support-and-services/">Support</a></li>
+                <li>  <a href="https://www.microfocus.com/how-to-buy/">How To Buy</a></li>
+            </ul>
+        </div>
 
-<div class="col-md-2 footer-text"><p>Legal</p>
-    <ul>
-        <li>  <a href="#">Privacy Policy</a></li>
-        <li>  <a href="#">Terms of Use</a></li>
-    </ul>
-</div>
-
-<div class="col-md-2 footer-text"><p>Compliance</p>
-    <ul>
-        <li>  <a href="#">Accessibility</a></li>
-        <li>  <a href="#">Anti-Slavory Statement</a></li>
-    </ul>
-</div>
-
-<div class="col-md-2 footer-text"><p>Help</p>
-    <ul>
-        <li>  <a href="#">Support</a></li>
-        <li>  <a href="#">How To Buy</a></li>
-    </ul>
-</div>
-
-<div class="col-md-2 footer-text"><p>Company</p>
-    <ul>
-        <li>  <a href="#">Careers</a></li>
-        <li>  <a href="#">Investor Relations</a></li>
-        <li>  <a href="#">Corproate Blog</a></li>
-    </ul>
-</div>
-
+        <div class="col-xs-6 col-sm-offset-1 col-sm-5 col-md-offset-0 col-md-2 footer-text"><p>Company</p>
+            <ul>
+                <li>  <a href="https://jobs.microfocus.com/">Careers</a></li>
+                <li>  <a href="http://investors.microfocus.com/">Investor Relations</a></li>
+                <li>  <a href="http://blog.microfocus.com/">Corproate Blog</a></li>
+            </ul>
+        </div>
+    <!-- </div> -->
 </div>
 
 <!-- Second row here -->
 
 <div class="row justify-content-md-center">
 
-    <div class="col-md-1 footer-text">
-        <a href="#">Community ></a>
+        <div class="col-xs-6 col-sm-4 footer-text">
+        <a href="https://www.microfocus.com/communities/">Community ></a>
     </div>
-    <div class="col-md-2 footer-text">
+    <div class="col-xs-6 col-sm-4 footer-text">
      <a>Follow us on:</a>
-     <a href="#"><i class="fab fa-twitter-square fa-lg footer-text"></i></a>
-     <a href="#"><i class="fab fa-facebook-square fa-lg footer-text"></i></a>
-     <a href="#"><i class="fab fa-linkedin fa-lg footer-text"></i></a>
-     <a href="#"><i class="fab fa-youtube-square fa-lg footer-text"></i></a>
-     <a href="#"><i class="fab fa-google-plus-square fa-lg footer-text"></i></a>
+     <a href="https://twitter.com/microfocus"><i class="fab fa-twitter-square fa-lg footer-text"></i></a>
+     <a href="https://www.facebook.com/MicroFocus"><i class="fab fa-facebook-square fa-lg footer-text"></i></a>
+     <a href="https://www.linkedin.com/company/micro-focus?trk=biz-companies-cym"><i class="fab fa-linkedin fa-lg footer-text"></i></a>
+     <a href="https://www.youtube.com/user/MicroFocusIntl"><i class="fab fa-youtube-square fa-lg footer-text"></i></a>
+     <a href="https://plus.google.com/u/0/+microfocus/posts"><i class="fab fa-google-plus-square fa-lg footer-text"></i></a>
     </div>
-    <div class="col-md-1"></div>
-    <div class="col-md-5 footer-text">
-     <a href="#">Subscribe</a> <a>to Micro Focus</a>
+    <div class="col-sm-offset-0 col-sm-4 footer-text">
+     <a href="https://www.microfocus.com/company/subscription/">Subscribe</a> <a>to Micro Focus</a>
     </div>
-    <div class="col-md-2 footer-text">
+    <div class="col-sm-offset-0 col-sm-12 col-md-2 footer-text">
         <p class="copyright">© 2018 Micro Focus</p>
     </div>
 
