--- a/MicroFocus-ROI-app/src/app/home/home.component.html
+++ b/MicroFocus-ROI-app/src/app/home/home.component.html
@@ -16,7 +16,7 @@
           incididunt ut ero labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
           exercitation ullamco.</p>
         <nav>
-          <a class="btn btn-primary fade-in" style="margin-right:8px;" routerLink="/about" routerLinkActive="active">Our Solutions</a>
+          <a class="btn btn-primary fade-in" style="margin-right:8px;" href="https://www.microfocus.com/">Our Solutions</a> <!-- Add  target="_blank" after the href to open in new tab. Not sure if we want to or not. -->
           <a class="btn btn-primary fade-in mf-featured-cta" routerLink="/begin" routerLinkActive="active">Let's Begin</a>
         </nav>
       </div>
