--- a/MicroFocus-ROI-app/src/app/footer/footer.component.css
+++ b/MicroFocus-ROI-app/src/app/footer/footer.component.css
@@ -3,7 +3,7 @@ footer {
     right: 0;
     bottom: 0;
     left: 0;
-    padding: 3rem;
+    padding: 3rem 0 3rem 0;
     background-color: #272A2A;
     text-align: center;
     color: white;
@@ -42,14 +42,13 @@ p {
     margin: 0;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 768px) {
     .footer {
         max-height: none;
+        padding: 0;
     }
-}
+    .footer-text, p, a, span, div, li, ul, .footer {
+        text-align: center;
+    }
 
-@media (min-width: 992px) {
-    .footer {
-        max-height: 256px;
-    }
 }
