Fix for disappearing Safari content.

--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.css
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.css
@@ -51,6 +51,11 @@
     font-size: 20px;
 }
 
+.mf-charts {
+    position: relative;
+    position: -webkit-sticky; /* Fix for disappearing Safari glitch */
+}
+
 .mf-change-btn {
     float: right;
 }
