--- a/MicroFocus-ROI-app/src/assets/css/_animations.css
+++ b/MicroFocus-ROI-app/src/assets/css/_animations.css
@@ -1,8 +1,8 @@
 .animated {
     -webkit-animation-duration: 1s;
             animation-duration: 1s; /* Default Duration */
-    -webkit-animation-fill-mode: both;
-            animation-fill-mode: both;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
 }
 
 .fade-in-up {
