--- a/assets/css/_buttons.css
+++ b/assets/css/_buttons.css
@@ -24,7 +24,8 @@
 }
 
 .btn.mf-featured-cta, .btn:focus {
-    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.5);
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(0,123,255,.5);
+            box-shadow: 0 0 0 0.2rem rgba(0,123,255,.5);
     border-color: transparent;
 }
 
@@ -45,4 +46,3 @@
         width: 100%;
     }
 }
-
