--- a/MicroFocus-ROI-app/src/app/footer/footer.component.html
+++ b/MicroFocus-ROI-app/src/app/footer/footer.component.html
@@ -52,10 +52,10 @@
 
 <div class="row d-flex justify-content-between justify-content-md-center">
 
-        <div class="col-xs-12 col-sm-4 col-md-1 col-sm-offset-2 footer-text text-center subscribe-text">
+        <div class="col-sm-12 col-lg-2 col-md-1 col-sm-offset-2 footer-text text-break">
         <a href="https://www.microfocus.com/communities/">Community></a>
     </div>
-    <div class="col-xs-12 col-sm-4 col-md-3 footer-text text-center">
+    <div class="col-sm-12 col-lg-2 col-md-3 footer-text text-break">
      <a>Follow us on:</a>
      <a href="https://twitter.com/microfocus"><i class="fab fa-twitter-square fa-lg footer-text"></i></a>
      <a href="https://www.facebook.com/MicroFocus"><i class="fab fa-facebook-square fa-lg footer-text"></i></a>
@@ -63,7 +63,7 @@
      <a href="https://www.youtube.com/user/MicroFocusIntl"><i class="fab fa-youtube-square fa-lg footer-text"></i></a>
      <a href="https://plus.google.com/u/0/+microfocus/posts"><i class="fab fa-google-plus-square fa-lg footer-text"></i></a>
     </div>
-    <div class="col-sm-offset-0 col-sm-4 col-md-4 footer-text">
+    <div class="col-sm-offset-0 col-sm-12 col-md-4 footer-text text-break">
      <a href="https://www.microfocus.com/company/subscription/">Subscribe</a> <a>to Micro Focus</a>
     </div>
     <div class="col-sm-offset-0 col-sm-12 col-md-2 footer-text">
