Fixed questionnaire query/breakpoints

--- a/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
+++ b/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
@@ -1,6 +1,6 @@
 <div class="mf-questn container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-9 col-lg-6">
       <h2 class="animated fade-in-up mf-title">Tell us a little about your organization</h2>
       <div class="mf-questn-form">
 
@@ -31,7 +31,7 @@
 
       </div>
     </div>
-    <div class="col-md-5 offset-md-1 d-none d-md-block animated fade-in" style="animation-delay:.5s;">
+    <div class="col-md-5 offset-md-1 d-none d-lg-block animated fade-in" style="animation-delay:.5s;">
       <app-helper-box></app-helper-box>
     </div>
   </div>
