--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
@@ -3,6 +3,8 @@
     <div class="col-md-6">
       <h2 class="animated fade-in-up heading">Explore what Micro Focus can do for you</h2>
       <p class="animated fade-in info-text mf-subtitle">Please review our solutions below</p>
+
+      <div class="animated fade-in"><a routerLink="/begin" routerLinkActive="active">&#8249; Change Information</a></div>
     </div>
     <div class="mf-solutions-list col-12">
       <div class="box row animated fade-in" style="animation-delay: .2s;" *ngFor="let cat of categories">
@@ -12,8 +14,8 @@
           </div>
         </div>
 
-        <div class="mf-solution-desc col-md-4">
-            {{ cat.description }}
+        <div class="mf-solution-desc col-md-4" [innerHTML]="cat.description">
+            <!-- {{ cat.description }} -->
         </div>
 
         <div class="mf-charts col-md-8">
@@ -24,7 +26,7 @@
             <a class="btn btn-light" href="#">Learn More</a> <div class="mf-savings">Save {{ cat.savings.savings | currency: dollar }} / year</div>
         </div>
       </div>
-      <a class="btn btn-primary mf-change-btn" routerLink="/begin" routerLinkActive="active">Change Information</a>
+      <a class="btn btn-primary mf-change-btn" href="#">Contact Me</a>
     </div>
   </div>
 </div>
