changed verbage of savings

--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="mf-solution-cta col-12">
-            <a class="btn btn-light" href="#">Learn More</a> <div class="mf-savings">Save {{ cat.savings.savings | currency: dollar }} in 5 years</div>
+            <a class="btn btn-light" href="#">Learn More</a> <div class="mf-savings">Save {{ cat.savings.savings | currency: dollar }} over 5 years</div>
         </div>
       </div>
       <a class="btn btn-primary mf-change-btn" href="#">Contact Me</a>
