--- a/MicroFocus-ROI-app/src/app/helper-box/helper-box.component.html
+++ b/MicroFocus-ROI-app/src/app/helper-box/helper-box.component.html
@@ -4,6 +4,6 @@
   <div class="mf-desc">
     <h4>{{ _data.title }}</h4>
     <p>{{ _data.description }}</p>
-    <a [attr.href]="_data.learnMoreUrl" target="_blank" class="mf-learn-more">Learn More</a>
+    <a *ngIf="_data.learnMoreUrl" [attr.href]="_data.learnMoreUrl" target="_blank" class="mf-learn-more">Learn More</a>
   </div>
 </div>
