--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
@@ -14,16 +14,14 @@
           </div>
         </div>
 
-        <div class="mf-solution-desc col-md-4" [innerHTML]="cat.description">
-            <!-- {{ cat.description }} -->
-        </div>
+        <div class="mf-solution-desc col-md-4" [innerHTML]="cat.description"></div>
 
         <div class="mf-charts col-md-8">
           <app-charts [data]="cat.savings.yearRoi"></app-charts>
         </div>
 
         <div class="mf-solution-cta col-12">
-            <a class="btn btn-light" href="#">Learn More</a> <div class="mf-savings">Save {{ cat.savings.savings | currency: dollar }} over 5 years</div>
+            <a class="btn btn-light" target="_blank" [attr.href]="cat.url">Learn More</a> <div class="mf-savings">Save {{ cat.savings.savings | currency: dollar }} over 5 years</div>
         </div>
       </div>
       <a class="btn btn-primary mf-change-btn" href="#">Contact Me</a>
