--- a/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
+++ b/MicroFocus-ROI-app/src/app/questionnaire/questionnaire.component.html
@@ -6,26 +6,26 @@
 
         <div class="mf-input-row animated fade-in-up" style="animation-delay: .2s;">
           <label for="num_staff">Number of Full-time Employees (FTEs)</label>
-          <input [(ngModel)]="mfNumStaff" (focus)="focused($event, 1)" id="num_staff" name="num_staff" type="text" placeholder="0">
+          <input [(ngModel)]="mfNumStaff" (focus)="focused($event)" id="num_staff" name="num_staff" type="text" placeholder="0">
         </div>
         
         <div class="mf-input-row dollar animated fade-in-up" style="animation-delay: .3s;">
           <label for="avg_wage">Average FTE Wage</label>
-          <input [(ngModel)]="mfAvgWage" (focus)="focused($event, 100)" id="avg_wage" name="avg_wage" type="text" placeholder="0.00">
+          <input [(ngModel)]="mfAvgWage" (focus)="focused($event)" id="avg_wage" name="avg_wage" type="text" placeholder="0.00">
         </div>
 
         <div class="mf-input-row percentage animated fade-in-up" style="animation-delay: .4s;">
           <label for="annual_turnover">Annual Employee Turnover (%)</label>
-          <input [(ngModel)]="mfAnTurnover" (focus)="focused($event, 10)" id="annual_turnover" name="annual_turnover" type="text" placeholder="0.0">
+          <input [(ngModel)]="mfAnTurnover" (focus)="focused($event)" id="annual_turnover" name="annual_turnover" type="text" placeholder="0.0">
         </div>
 
         <div class="mf-input-row dollar animated fade-in-up" style="animation-delay: .5s;">
           <label for="avg_it">IT Staff Average Wage</label>
-          <input [(ngModel)]="mfAvgItWage" (focus)="focused($event, 150)" id="avg_it" name="avg_it" type="text" placeholder="0.00">
+          <input [(ngModel)]="mfAvgItWage" (focus)="focused($event)" id="avg_it" name="avg_it" type="text" placeholder="0.00">
         </div>
         <div class="mf-input-row animated fade-in-up" style="animation-delay: .6s;">
           <label for="num_app">Number of Apps / Systems</label>
-          <input [(ngModel)]="mfNumApps" (focus)="focused($event, 200)" id="num_app" name="num_app" type="text" placeholder="0">
+          <input [(ngModel)]="mfNumApps" (focus)="focused($event)" id="num_app" name="num_app" type="text" placeholder="0">
         </div>
         <a class="btn btn-primary mf-cont-btn" routerLink="/savings">continue</a>
 
