--- a/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
+++ b/MicroFocus-ROI-app/src/app/calculator/calculator.component.html
@@ -7,24 +7,26 @@
       <div class="animated fade-in" style="animation-delay:.8s"><a routerLink="/begin" routerLinkActive="active">&#8249; Change Information</a></div>
     </div>
     <div class="mf-solutions-list col-12">
-      <div class="box row animated fade-in" style="animation-delay: .2s;" *ngFor="let cat of categories">
-        <div class="col-12">
-          <div class="mf-title">
-            {{ cat.name }}
+      <div *ngFor="let cat of categories">
+        <div class="box row animated fade-in" style="animation-delay: .2s;" *ngIf="cat.hidden == false">
+          <div class="col-12">
+            <div class="mf-title">
+              {{ cat.name }}
+            </div>
+          </div>
+
+          <div class="mf-solution-desc col-md-4" [innerHTML]="cat.description"></div>
+
+          <div class="mf-charts col-md-8">
+            <app-charts [data]="cat.savings.yearRoi"></app-charts>
+          </div>
+
+          <div class="mf-solution-cta col-12">
+              <a class="btn btn-light" target="_blank" [attr.href]="cat.url">Learn More</a> <div class="mf-savings">Save {{ cat.savings.savings | currency: dollar }} over 5 years</div>
           </div>
         </div>
-
-        <div class="mf-solution-desc col-md-4" [innerHTML]="cat.description"></div>
-
-        <div class="mf-charts col-md-8">
-          <app-charts [data]="cat.savings.yearRoi"></app-charts>
-        </div>
-
-        <div class="mf-solution-cta col-12">
-            <a class="btn btn-light" target="_blank" [attr.href]="cat.url">Learn More</a> <div class="mf-savings">Save {{ cat.savings.savings | currency: dollar }} over 5 years</div>
-        </div>
       </div>
-      <a class="btn btn-primary mf-change-btn" href="#">Contact Me</a>
+      <a class="btn btn-primary mf-change-btn" target="_blank" href="https://www.netiq.com/ContactsOffices/contacts_offices.jsp">Contact Us</a>
     </div>
   </div>
 </div>
