--- a/MicroFocus-ROI-app/src/app/home/home.component.html
+++ b/MicroFocus-ROI-app/src/app/home/home.component.html
@@ -12,9 +12,9 @@
       </div>
       <div class="not-pie">
         <h1 class="animated fade-in-up heading">Calculate your ROI from choosing the Micro Focus Identity Powers Platform</h1>
-        <p class="info-text fade-in mf-sub-text">Here at Micro Focus our adaptive identity-centric expertise gives organizations an integrated platform for Identity, Access, and Privilege Management that drives the Modern IT ecosystem. We fuel business innovation that will provide an improved user and customer experience, and the competitive advantage organizations need to thrive. We believe identity powers everything.</p>
+        <p class="info-text fade-in mf-sub-text">Here at Micro Focus, our adaptive identity-centric expertise gives organizations an integrated platform for Identity, Access, and Privilege Management that drives the modern IT ecosystem. We fuel business innovation that will provide an improved user and customer experience, and the competitive advantage organizations need to thrive. We believe identity powers everything.</p>
         <nav>
-          <a class="btn btn-primary fade-in" style="margin-right:8px;" href="https://www.netiq.com/solutions/identity-access-management/">Our Solutions</a> <!-- Add  target="_blank" after the href to open in new tab. Not sure if we want to or not. -->
+          <a class="btn btn-primary fade-in" style="margin-right:8px;" target="_blank" href="https://www.netiq.com/solutions/identity-access-management/">Our Solutions</a>
           <a class="btn btn-primary fade-in mf-featured-cta" routerLink="/begin" routerLinkActive="active">Let's Begin</a>
         </nav>
       </div>
